# CodexTradingEngine

./: .env.example  .flake8  CROSS_REPO_INTEGRATION.md  DEPLOYMENT.md  Dockerfile  EVEQ_FAILSAFE_RECEIPT.md  README.md  SAFETY.md  cycle_receipt.py  docker-compose.yml  eveq_failsafe_receipt.py  proof_adapters.py  proof_gate_min.txt  pyproject.toml  requirements-dev.txt  requirements.txt  safe_test_marker.txt  shadow_cycle_runner.py
benchmarks/: seeded_market_v0_1.json
config/: omega.example.yaml  strategy.yaml
contracts/: EVE_Q_CROSS_REPO_PINNING_v0_1.md  ORGAN_CONTRACT.md  artifact_carrier_manifest.json  bounded_authority_manifest_v0_2.json  eve_q_cross_repo_contract_v0_1.manifest.json  organ_contract.json  ttl_policy.json
docs/: FLASH_LIQUIDITY_BOUNDARY.md  PHASE_2C2_HUMAN_GATE.md  PHASE_2C2_PR_BODY.md  PHASE_2C2_READY.md  QAOA_DELTA_PHASE_2A.md  QAOA_DELTA_PHASE_2B.md  QAOA_DELTA_PHASE_2C1.md  QAOA_DELTA_PHASE_2C2.md  QAOA_DELTA_PHASE_2C2_CHECKLIST.md  QAOA_DELTA_PHASE_2C2_FINAL_NOTE.md  QAOA_DELTA_PHASE_2C2_NOTES.md  QAOA_DELTA_PHASE_2C2_PROMOTION_LAW.md  QAOA_DELTA_PHASE_2C2_RECEIPT_FIELDS.md  QAOA_DELTA_PHASE_2C2_SCOPE.md  QAOA_DELTA_PHASE_2C2_STATUS.md  QAOA_DELTA_PHASE_2D.md  QAOA_DELTA_PHASE_2E.md  QAOA_DELTA_TRIANGULATION_v0_1.md  STRATEGY_PACKET_UPLIFT_V0_1.md  TYPED_TTL_LATTICE_V0_2.md  artifact_carrier_manifest_example.md  constitutional_membrane_checkpoint.md  constitutional_release_audit.md  membrane_tool_usage.md  omega_notes.md  receipt_carrier_attestation_example.md  ttl_graceful_degradation_policy.md
eve_q/: alert_dispatcher.py  artifact_carrier.py  capital_action_gate.py  contract_bundle.py  cross_repo_ingestor.py  delta_robustness.py  demo_simulation.py  flash_liquidity.py  gate1_failure_campaign.py  gate1_hardening.py  gate1_soak_runner.py  gate1_soak_scaffold.py  gate1_source_review.py  gate_descent.py  hybrid_benchmark.py  immutable_receipts.py  ipfs_adapters.py  live_read_only_telemetry.py  membrane_tool.py  merkle_proofs.py  organ_contract.py  perturbation_calibration.py  prometheus_exporter.py  proposal_artifact.py  qaoa_delta.py  qaoa_sampling.py  receipt_carrier_attestation.py  receipt_emitter.py  receipt_ledger_audit.py  receipt_merkle_anchor.py  receipt_merkle_audit.py  receipt_sealer.py  risk_management.py  rust_repricing.py  scroll_protocol.py  simulation_runs.py  soak_harness.py  strategy_packet_uplift.py  ttl_lattice.py  ttl_policy.py
examples/: artifact_carrier_manifest.example.json  flash_liquidity_geometry.example.json  flash_liquidity_verification.example.json  receipt_carrier_attestation.example.json  seeded_strategy_packet_v0_1.json
models/: receipt.py
omega_telemetry/: __init__.py  alert_module.py  config_loader.py  config_tools.py  context_runner.py  db.py  health.py  models.py  pricing.py  sentiment_tracker.py  signal_observer.py
rules/: market_signal_rules.json
rust/delta-verifier/: Cargo.toml
rust/delta-verifier/src/: lib.rs  main.rs
schemas/: bounded_authority_manifest_v0_2.schema.json  codex_planning_uplift_receipt.schema.json  delta_repricing_request.schema.json  gate_decision_v0_1.schema.json  (+22 more)
(+168 files in other folders)
