[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CodexTradingEngine"
version = "2.0.0"
description = "Simulation-first crypto telemetry, arbitrage research, receipt, and safety engine for Termux and Python."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ArchitectofAthena"}]

dependencies = [
    "aiohttp==3.14.1",
    "PyYAML==6.0.3",
    "feedparser==6.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
]
test = [
    "pytest==9.1.1",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
quantum = [
    "qiskit==2.5.0",
]
security = [
    "bandit>=1.7.5",
    "pip-audit>=2.6.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "ASYNC",
]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -v --tb=short --cov=. --cov-report=term-missing:skip-covered --cov-report=html"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "shadow: shadow cycle tests",
    "live: live trading tests (requires human review)",
    "asyncio: async tests",
]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 56
