[package]
name = "codex-delta-verifier"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Pure Rust exact verifier for simulation-only triangular arbitrage candidates"

[lib]
name = "codex_delta_verifier"
path = "src/lib.rs"

[[bin]]
name = "codex-delta-verifier"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
