[package]
name = "codex-delta-verifier"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Pure Rust exact verifier for simulation-only triangular arbitrage candidates"

[lib]
name = "codex_delta_verifier"
path = "src/lib.rs"

[[bin]]
name = "codex-delta-verifier"
path = "src/main.rs"

[[bin]]
name = "codex-flash-liquidity-verifier"
path = "src/bin/codex-flash-liquidity-verifier.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[lints.rust]
unsafe_code = "forbid"
